--- a/style.css
+++ b/style.css
@@ -1,59 +1,105 @@
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap');
+
 body {
-    font-family: 'Arial', sans-serif;
-    text-align: center;
-    margin: 20px;
-  }
-  
-  .titulo {
-    font-size: 36px;
-    margin-bottom: 20px;
-    position: relative;
-    height: 300px;
-  }
-  
-  #guess-input {
-    margin-bottom: 10px;
-    padding: 8px;
-    font-size: 16px;
-  }
-  
-  #guess-button,
-  #restart-button {
-    padding: 10px;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  #grid {
-    margin-top: 20px;
-    max-width: 400px; 
-    margin-left: auto;
-    margin-right: auto;
-  }
-  
-  .row {
+    font-family: 'Oswald', sans-serif;
+    background-color: #e0dfdf; 
     display: flex;
-    margin-bottom: 10px;
-  }
-  
-  .letter {
-    flex: 1;
-    padding: 6px;
-    margin: 0 2px;
-    font-size: 14px;
-    text-align: center;
-    border-radius: 5px;
-  }
-  
-  #mensaje {
-    font-size: 20px;
-    margin-top: 20px;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    margin: 0;
   }
 
-  .close {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 20px;
-    cursor: pointer;
+  h1{
+    text-align: center;
+    margin-top: 50px;
+    color: #2E4272; 
+  }
+
+  #usuarioInput {
+    display: block;
+    margin: 0 auto 20px;
+    padding: 10px;
+    font-size: 18px;
+    width: 250px;
+    border: 1px solid #888; 
+    font-family: 'Oswald', sans-serif;
+    text-align: center; 
+  }
+
+  #botonInput {
+    display: block;
+    margin: 0 auto;
+    padding: 10px 20px;
+    font-size: 18px;
+    background-color: #2E4272;
+    color: #000000; 
+    border: none;
+    border-radius: 3px;
+    font-family: 'Oswald', sans-serif;
+  }
+
+  #contenedor {
+    position: relative;
+  }
+
+  #principal {
+    padding: 20px;
+    background-color: #a7a6a6;
+    border-radius: 10px;
+    text-align: center;
+  }
+
+  #error {
+    display: none;
+    margin: 40px auto;
+    position: relative;
+    font-size: x-large;
+    color: #FF0000;
+  }
+
+  button:active {
+    transform: scale(0.95);
+  }
+
+  .letter {
+    border: 1px solid #555;
+    padding: 3px;
+    margin: 3px;
+    min-width: 20px;
+    text-align: center; 
+    display: inline-block;
+  }
+
+  #grilla {
+    margin: 40px auto;
+    display: flex;
+    flex-direction: column; 
+    align-items: center;
+    justify-content: center;
+}
+
+.row {
+    margin-bottom: 10px;
+    text-align: center; 
+}
+
+
+  .input-area {
+    margin: 30px;
+  }
+
+  #intentos {
+    text-align: center;
+    font-size: xx-large;
+    font-weight: 800;
+    color: #2E4272; 
+  }
+
+  #MsgLose {
+    text-align: center;
+    font-size: xx-large;
+    font-weight: 800;
+    display: none;
+    color: #FF0000; 
   }
